kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    app.kubernetes.io/part-of: cloud-native-observability
    app.kubernetes.io/managed-by: kubectl
